--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.2",
     "axios": "^1.6.0",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "express": "~4.18.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
