working auth cookie

--- a/apps/toolbox-client/project.json
+++ b/apps/toolbox-client/project.json
@@ -61,6 +61,9 @@
     },
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
+      "options": {
+        "proxyConfig": "apps/toolbox-client/src/proxy.conf.json"
+      },
       "configurations": {
         "production": {
           "buildTarget": "toolbox-client:build:production"
