set up auth definite + clean front

--- a/apps/toolbox-client/project.json
+++ b/apps/toolbox-client/project.json
@@ -26,7 +26,8 @@
         "apps/toolbox-client/src/styles.scss",
         "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
         "node_modules/primeng/resources/primeng.min.css",
-        "node_modules/primeflex/primeflex.css"
+        "node_modules/primeflex/primeflex.css",
+        "primeicons/primeicons.css"
       ],
         "scripts": [],
         "server": "apps/toolbox-client/src/main.server.ts",
