--- a/apps/auth/tsconfig.app.json
+++ b/apps/auth/tsconfig.app.json
@@ -7,6 +7,6 @@
     "emitDecoratorMetadata": true,
     "target": "es2021"
   },
-  "include": ["src/**/*.ts", "../toolbox-gateway/src/app/dto/sign-in.dto.ts", "../../libs/common/src/decorators/current-user.decorator.ts"],
+  "include": ["src/**/*.ts", "../../libs/common/src/decorators/current-user.decorator.ts"],
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
