--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "toolbox-client:dev:docker": "nx serve toolbox-client --host=0.0.0.0 --poll 5000",
+    "toolbox-gateway:dev:docker": "nx serve toolbox-gateway --host=0.0.0.0",
+    "auth:dev:docker": "nx serve auth --host=0.0.0.0",
     "build:books": "nx build books",
     "serve:books": "nx serve books"
   },
@@ -59,18 +62,18 @@
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nx-tools/nx-container": "^6.1.0",
-    "@nx/angular": "^20.0.1",
-    "@nx/devkit": "20.0.1",
-    "@nx/eslint": "20.0.1",
-    "@nx/eslint-plugin": "20.0.1",
-    "@nx/jest": "20.0.1",
-    "@nx/js": "20.0.1",
-    "@nx/nest": "20.0.1",
-    "@nx/node": "20.0.1",
-    "@nx/playwright": "20.0.1",
-    "@nx/web": "20.0.1",
-    "@nx/webpack": "20.0.1",
-    "@nx/workspace": "20.0.1",
+    "@nx/angular": "20.1.2",
+    "@nx/devkit": "20.1.2",
+    "@nx/eslint": "20.1.2",
+    "@nx/eslint-plugin": "20.1.2",
+    "@nx/jest": "20.1.2",
+    "@nx/js": "20.1.2",
+    "@nx/nest": "20.1.2",
+    "@nx/node": "20.1.2",
+    "@nx/playwright": "20.1.2",
+    "@nx/web": "20.1.2",
+    "@nx/webpack": "20.1.2",
+    "@nx/workspace": "20.1.2",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "~18.2.0",
     "@swc-node/register": "~1.9.1",
@@ -90,7 +93,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.1.0",
-    "nx": "20.0.1",
+    "mongodb": "^6.10.0",
+    "nx": "20.1.2",
     "prettier": "^2.6.2",
     "primeflex": "^3.3.1",
     "primeicons": "7.0.0",
