--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,61 @@
 
 services:
 
-  books:
-    build:
-      dockerfile: ./apps/books/Dockerfile
-      target: development
-      context: .
-    command: npm run serve:books
-    expose:
-      - 3333
+  # Toolbox client App
+  # toolbox-client:
+  #   env_file:
+  #     - path: ./.env
+  #       required: true # default
+  #   extends:
+  #     file: docker-compose.base.yml
+  #     service: nx-app-base
+  #   command: npm run toolbox-client:dev:docker
+  #   ports:
+  #     - ${CLIENT_PORT}:${CLIENT_PORT}
+
+    # Auth App
+  # auth:
+  #   extends:
+  #     file: docker-compose.base.yml
+  #     service: nx-app-base
+  #   command: npm run auth:dev:docker
+  #   depends_on:
+  #     - mongo
+  #   ports:
+  #     -  ${AUTH_HTTP_PORT}:${AUTH_HTTP_PORT} # API Entry port
+  #     # - 4311:4311 # Server Debugging port
+
+  toolbox-gateway:
+    extends:
+      file: docker-compose.base.yml
+      service: nx-app-base
+    command: npm run toolbox-gateway:dev:docker
     ports:
-      - '3000:3000'
-    volumes:
-      - .:/app
-      - /app/node_modules
+      -  ${GATEWAY_PORT}:${GATEWAY_PORT} # API Entry port
+      # - 4311:4311 # Server Debugging port
 
   mongo:
     image: mongo
+
+  # # React App
+  # app-2:
+  #   extends:
+  #     file: docker-compose.base.yml
+  #     service: nx-app-base
+  #   command: npm run app-2:dev:docker
+  #   ports:
+  #     - 4202:4200
+
+  # # Angular App
+  # app-3:
+  #   extends:
+  #     file: docker-compose.base.yml
+  #     service: nx-app-base
+  #   command: npm run app-3:dev:docker
+  #   ports:
+  #     - 4203:4200
+
+
+
+volumes:
+  mono-node-modules: null
