--- a/apps/toolbox-client/project.json
+++ b/apps/toolbox-client/project.json
@@ -75,6 +75,21 @@
       },
       "defaultConfiguration": "development"
     },
+    "serve-docker": {
+      "executor": "@angular-devkit/build-angular:dev-server",
+      "options": {
+        "proxyConfig": "apps/toolbox-client/src/proxy-docker.conf.json"
+      },
+      "configurations": {
+        "production": {
+          "buildTarget": "toolbox-client:build:production"
+        },
+        "development": {
+          "buildTarget": "toolbox-client:build:development"
+        }
+      },
+      "defaultConfiguration": "development"
+    },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
