setup books crud

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,9 +16,10 @@
     "baseUrl": ".",
     "paths": {
       "@auth/*": ["apps/auth/*"],
+      "@toolbox-client/*": ["apps/toolbox-client/*"],
       "@libs/common": ["libs/common/src/index.ts"],
-      "@toolbox-client": ["apps/toolbox-client/*"],
-      "@constants": ["libs/constants/index.ts"]
+      "@constants": ["libs/constants/index.ts"],
+      "@site/shared-store": ["libs/shared-store/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
