--- a/apps/toolbox-client/project.json
+++ b/apps/toolbox-client/project.json
@@ -15,6 +15,7 @@
         "browser": "apps/toolbox-client/src/main.ts",
         "polyfills": ["zone.js"],
         "tsConfig": "apps/toolbox-client/tsconfig.app.json",
+        "externalDependencies":[""],
         "inlineStyleLanguage": "scss",
         "assets": [
           {
