--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
 
   # Toolbox client App
   toolbox-client:
-    env_file:
+    env_file: 
       - path: ./docker.env
         required: true # default
     extends:
@@ -15,9 +15,9 @@ services:
 
   # Auth App
   auth:
-    env_file:
-    - path: ./docker.env
-      required: true # default
+    env_file: 
+      - path: ./docker.env
+        required: true # default
     extends:
       file: docker-compose.base.yml
       service: nx-app-base
@@ -25,43 +25,33 @@ services:
     depends_on:
       - mongo
     ports:
-      -  ${AUTH_HTTP_PORT}:${AUTH_HTTP_PORT} # API Entry port
-      # - 4311:4311 # Server Debugging port
+      -  ${AUTH_HTTP_PORT}:${AUTH_HTTP_PORT}
+
+  # Books ms
+  books:
+    env_file: 
+      - path: ./docker.env
+        required: true # default
+    extends:
+      file: docker-compose.base.yml
+      service: nx-app-base
+    command: npm run books:dev:docker
+    depends_on:
+      - mongo
 
   toolbox-gateway:
-    env_file:
-    - path: ./docker.env
-      required: true # default
+    env_file: 
+      - path: ./docker.env
+        required: true # default
     extends:
       file: docker-compose.base.yml
       service: nx-app-base
     command: npm run toolbox-gateway:dev:docker
     ports:
-      -  ${GATEWAY_PORT}:${GATEWAY_PORT} # API Entry port
-      # - 4311:4311 # Server Debugging port
+      -  ${GATEWAY_PORT}:${GATEWAY_PORT} 
 
   mongo:
     image: mongo
-
-  # # React App
-  # app-2:
-  #   extends:
-  #     file: docker-compose.base.yml
-  #     service: nx-app-base
-  #   command: npm run app-2:dev:docker
-  #   ports:
-  #     - 4202:4200
-
-  # # Angular App
-  # app-3:
-  #   extends:
-  #     file: docker-compose.base.yml
-  #     service: nx-app-base
-  #   command: npm run app-3:dev:docker
-  #   ports:
-  #     - 4203:4200
-
-
 
 volumes:
   mono-node-modules: null
