--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "toolbox-client:dev:docker": "nx serve-docker toolbox-client --host=0.0.0.0 --poll=500",
     "toolbox-gateway:dev:docker": "nx serve toolbox-gateway --host=0.0.0.0",
     "auth:dev:docker": "nx serve auth --host=0.0.0.0 --watch",
-    "build:books": "nx build books",
-    "serve:books": "nx serve books"
+    "books:dev:docker": "nx serve books --host=0.0.0.0 --watch"
   },
   "private": true,
   "dependencies": {
@@ -31,6 +30,15 @@
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.2",
+    "@ngrx/effects": "^18.0.2",
+    "@ngrx/router-store": "^18.0.2",
+    "@ngrx/schematics": "^18.0.2",
+    "@ngrx/signals": "^18.1.1",
+    "@ngrx/store": "^18.0.2",
+    "@ngrx/store-devtools": "^18.0.2",
+    "@nx-tools/nx-container": "^6.1.0",
+    "@ngrx/component-store": "^18.0.2",
+    "@ngrx/entity": "^18.0.2",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -61,7 +69,6 @@
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
-    "@nx-tools/nx-container": "^6.1.0",
     "@nx/angular": "20.1.2",
     "@nx/devkit": "20.1.2",
     "@nx/eslint": "20.1.2",
