--- a/docker.env
+++ b/docker.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://mongo:27017/books
+MONGODB_URI=mongodb://mongo:27017
 JWT_SECRET=your_secret_key
 JWT_EXPIRATION=3600
 CLIENT_PORT=4200
