--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,9 @@ services:
 
   mongo:
     image: mongo
+    container_name: mongo
+    ports:
+        - "27018:27017"
 
 volumes:
   mono-node-modules: null
