--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,9 +16,9 @@
     "baseUrl": ".",
     "paths": {
       "@auth/*": ["apps/auth/*"],
-      "@toolbox-client/*": ["apps/toolbox-client/*"],
-      "@libs/common": ["libs/common/src/index.ts"],
       "@constants": ["libs/constants/index.ts"],
+      "@libs/common": ["libs/common/src/index.ts"],
+      "@toolbox-client/*": ["apps/toolbox-client/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
