--- a/nx.json
+++ b/nx.json
@@ -38,7 +38,8 @@
       "exclude": [
         "apps/toolbox-gateway-e2e/**/*",
         "apps/auth-e2e/**/*",
-        "apps/books-e2e/**/*"
+        "apps/books-e2e/**/*",
+        "apps/chat-e2e/**/*"
       ]
     },
     {
