--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "toolbox-client:dev:docker": "nx serve-docker toolbox-client --host=0.0.0.0 --poll=500",
     "toolbox-gateway:dev:docker": "nx serve toolbox-gateway --host=0.0.0.0",
     "auth:dev:docker": "nx serve auth --host=0.0.0.0 --watch",
-    "books:dev:docker": "nx serve books --host=0.0.0.0 --watch"
+    "books:dev:docker": "nx serve books --host=0.0.0.0 --watch",
+    "chat:dev:docker": "nx serve chat --host=0.0.0.0 --watch"
+
   },
   "private": true,
   "dependencies": {
@@ -21,6 +23,7 @@
     "@angular/router": "~18.2.0",
     "@angular/ssr": "~18.2.0",
     "@auth0/angular-jwt": "^5.2.0",
+    "@google/generative-ai": "~0.21.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.2",
@@ -30,6 +33,9 @@
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/swagger": "^7.4.2",
+    "@nestjs/websockets" : "^10.4.12",
+    "@nestjs/platform-socket.io": "^10.4.12",
     "@ngrx/effects": "^18.0.2",
     "@ngrx/router-store": "^18.0.2",
     "@ngrx/schematics": "^18.0.2",
@@ -49,6 +55,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2",
     "nestjs-pino": "^4.1.0",
+    "ngx-socket-io": "^4.7.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
@@ -57,6 +64,7 @@
     "pino-pretty": "^11.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "socket.io": "^4.8.1",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
