--- a/package.json
+++ b/package.json
@@ -112,8 +112,8 @@
     "nx": "20.1.3",
     "prettier": "^2.6.2",
     "primeflex": "^3.3.1",
-    "primeicons": "7.0.0",
-    "primeng": "^17.18.11",
+    "primeicons": "^7.0.0",
+    "primeng": "^18.0.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
