--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@nx/webpack": "20.1.3",
     "@nx/workspace": "20.1.3",
     "@playwright/test": "^1.36.0",
+    "@primeng/themes": "18.0.0",
     "@schematics/angular": "~18.2.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
