--- a/package.json
+++ b/package.json
@@ -8,20 +8,21 @@
     "auth:dev:docker": "nx serve auth --host=0.0.0.0 --watch",
     "books:dev:docker": "nx serve books --host=0.0.0.0 --watch",
     "chat:dev:docker": "nx serve chat --host=0.0.0.0 --watch"
-
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~18.2.0",
-    "@angular/common": "~18.2.0",
-    "@angular/compiler": "~18.2.0",
-    "@angular/core": "~18.2.0",
-    "@angular/forms": "~18.2.0",
-    "@angular/platform-browser": "~18.2.0",
-    "@angular/platform-browser-dynamic": "~18.2.0",
-    "@angular/platform-server": "~18.2.0",
-    "@angular/router": "~18.2.0",
-    "@angular/ssr": "~18.2.0",
+    "@angular/animations": "19.0.4",
+    "@angular/cdk": "~19.0.3",
+    "@angular/common": "19.0.4",
+    "@angular/compiler": "19.0.4",
+    "@angular/core": "19.0.4",
+    "@angular/forms": "19.0.4",
+    "@angular/material": "19.0.3",
+    "@angular/platform-browser": "19.0.4",
+    "@angular/platform-browser-dynamic": "19.0.4",
+    "@angular/platform-server": "19.0.4",
+    "@angular/router": "19.0.4",
+    "@angular/ssr": "19.0.5",
     "@auth0/angular-jwt": "^5.2.0",
     "@google/generative-ai": "~0.21.0",
     "@nestjs/common": "^10.0.2",
@@ -33,18 +34,19 @@
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.2",
-    "@nestjs/swagger": "^7.4.2",
-    "@nestjs/websockets" : "^10.4.12",
     "@nestjs/platform-socket.io": "^10.4.12",
+    "@nestjs/swagger": "^7.4.2",
+    "@nestjs/websockets": "^10.4.12",
+    "@ngrx/component-store": "^18.0.2",
     "@ngrx/effects": "^18.0.2",
+    "@ngrx/entity": "^18.0.2",
     "@ngrx/router-store": "^18.0.2",
     "@ngrx/schematics": "^18.0.2",
     "@ngrx/signals": "^18.1.1",
     "@ngrx/store": "^18.0.2",
     "@ngrx/store-devtools": "^18.0.2",
     "@nx-tools/nx-container": "^6.1.0",
-    "@ngrx/component-store": "^18.0.2",
-    "@ngrx/entity": "^18.0.2",
+    "add": "^2.0.6",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -65,33 +67,33 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "socket.io": "^4.8.1",
-    "zone.js": "~0.14.3"
+    "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~18.2.0",
-    "@angular-devkit/core": "~18.2.0",
-    "@angular-devkit/schematics": "~18.2.0",
-    "@angular/cli": "~18.2.0",
-    "@angular/compiler-cli": "~18.2.0",
-    "@angular/language-service": "~18.2.0",
+    "@angular-devkit/build-angular": "19.0.5",
+    "@angular-devkit/core": "19.0.5",
+    "@angular-devkit/schematics": "19.0.5",
+    "@angular/cli": "~19.0.0",
+    "@angular/compiler-cli": "19.0.4",
+    "@angular/language-service": "19.0.4",
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
-    "@nx/angular": "20.1.3",
-    "@nx/devkit": "20.1.3",
-    "@nx/eslint": "20.1.3",
-    "@nx/eslint-plugin": "20.1.3",
-    "@nx/jest": "20.1.3",
-    "@nx/js": "20.1.3",
-    "@nx/nest": "20.1.3",
-    "@nx/node": "20.1.3",
-    "@nx/playwright": "20.1.3",
-    "@nx/web": "20.1.3",
-    "@nx/webpack": "20.1.3",
-    "@nx/workspace": "20.1.3",
+    "@nx/angular": "20.2.2",
+    "@nx/devkit": "20.2.2",
+    "@nx/eslint": "20.2.2",
+    "@nx/eslint-plugin": "20.2.2",
+    "@nx/jest": "20.2.2",
+    "@nx/js": "20.2.2",
+    "@nx/nest": "20.2.2",
+    "@nx/node": "20.2.2",
+    "@nx/playwright": "20.2.2",
+    "@nx/web": "20.2.2",
+    "@nx/webpack": "20.2.2",
+    "@nx/workspace": "20.2.2",
     "@playwright/test": "^1.36.0",
     "@primeng/themes": "18.0.0",
-    "@schematics/angular": "~18.2.0",
+    "@schematics/angular": "19.0.5",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -101,16 +103,16 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@typescript-eslint/utils": "^8.0.0",
-    "angular-eslint": "^18.3.0",
+    "angular-eslint": "19.0.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-playwright": "^1.6.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
-    "jest-preset-angular": "~14.1.0",
+    "jest-preset-angular": "14.4.2",
     "mongodb": "^6.10.0",
-    "nx": "20.1.3",
+    "nx": "20.2.2",
     "prettier": "^2.6.2",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
@@ -118,7 +120,7 @@
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.5.2",
+    "typescript": "5.6.3",
     "typescript-eslint": "^8.0.0",
     "webpack-cli": "^5.1.4"
   }
