--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "auth:dev:docker": "nx serve auth --host=0.0.0.0 --watch",
     "books:dev:docker": "nx serve books --host=0.0.0.0 --watch",
     "chat:dev:docker": "nx serve chat --host=0.0.0.0 --watch"
-    },
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "19.0.4",
     "@angular/cdk": "~19.0.3",
+    "@angular/cdk-experimental": "^19.0.3",
     "@angular/common": "19.0.4",
     "@angular/compiler": "19.0.4",
     "@angular/core": "19.0.4",
@@ -37,14 +38,14 @@
     "@nestjs/platform-socket.io": "^10.4.12",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/websockets": "^10.4.12",
-    "@ngrx/component-store": "^18.0.2",
-    "@ngrx/effects": "^18.0.2",
-    "@ngrx/entity": "^18.0.2",
-    "@ngrx/router-store": "^18.0.2",
-    "@ngrx/schematics": "^18.0.2",
-    "@ngrx/signals": "^18.1.1",
-    "@ngrx/store": "^18.0.2",
-    "@ngrx/store-devtools": "^18.0.2",
+    "@ngrx/component-store": "^19.0.0",
+    "@ngrx/effects": "^19.0.0",
+    "@ngrx/entity": "^19.0.0",
+    "@ngrx/router-store": "^19.0.0",
+    "@ngrx/schematics": "^19.0.0",
+    "@ngrx/signals": "^19.0.0",
+    "@ngrx/store": "^19.0.0",
+    "@ngrx/store-devtools": "^19.0.0",
     "@nx-tools/nx-container": "^6.1.0",
     "add": "^2.0.6",
     "axios": "^1.6.0",
