--- a/package.json
+++ b/package.json
@@ -11,33 +11,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "19.0.4",
-    "@angular/cdk": "~19.0.3",
-    "@angular/cdk-experimental": "^19.0.3",
-    "@angular/common": "19.0.4",
-    "@angular/compiler": "19.0.4",
-    "@angular/core": "19.0.4",
-    "@angular/forms": "19.0.4",
-    "@angular/material": "19.0.3",
-    "@angular/platform-browser": "19.0.4",
-    "@angular/platform-browser-dynamic": "19.0.4",
-    "@angular/platform-server": "19.0.4",
-    "@angular/router": "19.0.4",
-    "@angular/ssr": "19.0.5",
+    "@angular-architects/ngrx-toolkit": "^18.1.1",
+    "@angular/animations": "19.0.5",
+    "@angular/cdk": "~19.0.4",
+    "@angular/cdk-experimental": "^19.0.4",
+    "@angular/common": "19.0.5",
+    "@angular/compiler": "19.0.5",
+    "@angular/core": "19.0.5",
+    "@angular/forms": "19.0.5",
+    "@angular/material": "19.0.4",
+    "@angular/platform-browser": "19.0.5",
+    "@angular/platform-browser-dynamic": "19.0.5",
+    "@angular/platform-server": "19.0.5",
+    "@angular/router": "19.0.5",
+    "@angular/ssr": "19.0.6",
     "@auth0/angular-jwt": "^5.2.0",
     "@google/generative-ai": "~0.21.0",
-    "@nestjs/common": "^10.0.2",
+    "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.3.0",
-    "@nestjs/core": "^10.0.2",
+    "@nestjs/core": "^10.4.15",
+    "@nestjs/event-emitter": "^2.1.1",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/microservices": "^10.4.5",
+    "@nestjs/microservices": "^10.4.15",
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.2",
-    "@nestjs/platform-socket.io": "^10.4.12",
-    "@nestjs/swagger": "^7.4.2",
-    "@nestjs/websockets": "^10.4.12",
+    "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/platform-socket.io": "^10.4.15",
+    "@nestjs/swagger": "^8.1.0",
+    "@nestjs/websockets": "^10.4.15",
     "@ngrx/component-store": "^19.0.0",
     "@ngrx/effects": "^19.0.0",
     "@ngrx/entity": "^19.0.0",
@@ -46,83 +48,84 @@
     "@ngrx/signals": "^19.0.0",
     "@ngrx/store": "^19.0.0",
     "@ngrx/store-devtools": "^19.0.0",
-    "@nx-tools/nx-container": "^6.1.0",
+    "@nx-tools/nx-container": "^6.2.0",
     "add": "^2.0.6",
-    "axios": "^1.6.0",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
-    "express": "~4.18.2",
+    "express": "~4.21.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.2",
-    "nestjs-pino": "^4.1.0",
-    "ngx-socket-io": "^4.7.0",
+    "mongoose": "^8.9.2",
+    "nestjs-pino": "^4.2.0",
+    "ngx-socket-io": "^4.8.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pino-http": "^10.3.0",
-    "pino-pretty": "^11.3.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0",
+    "pino-pretty": "^13.0.0",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
     "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.0.5",
-    "@angular-devkit/core": "19.0.5",
-    "@angular-devkit/schematics": "19.0.5",
-    "@angular/cli": "~19.0.0",
-    "@angular/compiler-cli": "19.0.4",
-    "@angular/language-service": "19.0.4",
-    "@eslint/js": "^9.8.0",
-    "@nestjs/schematics": "^10.0.1",
-    "@nestjs/testing": "^10.0.2",
-    "@nx/angular": "20.2.2",
-    "@nx/devkit": "20.2.2",
-    "@nx/eslint": "20.2.2",
-    "@nx/eslint-plugin": "20.2.2",
-    "@nx/jest": "20.2.2",
-    "@nx/js": "20.2.2",
-    "@nx/nest": "20.2.2",
-    "@nx/node": "20.2.2",
-    "@nx/playwright": "20.2.2",
-    "@nx/web": "20.2.2",
-    "@nx/webpack": "20.2.2",
-    "@nx/workspace": "20.2.2",
-    "@playwright/test": "^1.36.0",
-    "@primeng/themes": "18.0.0",
-    "@schematics/angular": "19.0.5",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
-    "@types/express": "4.17.14",
-    "@types/jest": "^29.5.12",
-    "@types/node": "~18.16.9",
+    "@angular-devkit/build-angular": "19.0.6",
+    "@angular-devkit/core": "19.0.6",
+    "@angular-devkit/schematics": "19.0.6",
+    "@angular/cli": "~19.0.6",
+    "@angular/compiler-cli": "19.0.5",
+    "@angular/language-service": "19.0.5",
+    "@eslint/js": "^9.17.0",
+    "@nestjs/schematics": "^10.2.3",
+    "@nestjs/testing": "^10.4.15",
+    "@nx/angular": "20.3.0",
+    "@nx/devkit": "20.3.0",
+    "@nx/eslint": "20.3.0",
+    "@nx/eslint-plugin": "20.3.0",
+    "@nx/jest": "20.3.0",
+    "@nx/js": "20.3.0",
+    "@nx/nest": "20.3.0",
+    "@nx/node": "20.3.0",
+    "@nx/playwright": "20.3.0",
+    "@nx/web": "20.3.0",
+    "@nx/webpack": "20.3.0",
+    "@nx/workspace": "20.3.0",
+    "@playwright/test": "^1.49.1",
+    "@primeng/themes": "19.0.2",
+    "@schematics/angular": "19.0.6",
+    "@swc-node/register": "~1.10.9",
+    "@swc/core": "~1.10.2",
+    "@swc/helpers": "~0.5.15",
+    "@types/express": "5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "~22.10.2",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
-    "@typescript-eslint/utils": "^8.0.0",
+    "@typescript-eslint/utils": "^8.18.2",
     "angular-eslint": "19.0.2",
-    "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-playwright": "^1.6.2",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-playwright": "^2.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "14.4.2",
-    "mongodb": "^6.10.0",
-    "nx": "20.2.2",
-    "prettier": "^2.6.2",
+    "mongodb": "^6.12.0",
+    "node-polyfill-webpack-plugin": "^4.1.0",
+    "nx": "20.3.0",
+    "prettier": "^3.4.2",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
-    "primeng": "19.0.0-rc.1",
-    "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
-    "tslib": "^2.3.0",
-    "typescript": "5.6.3",
-    "typescript-eslint": "^8.0.0",
-    "webpack-cli": "^5.1.4"
+    "primeng": "19.0.2",
+    "ts-jest": "^29.2.5",
+    "ts-node": "10.9.2",
+    "tslib": "^2.8.1",
+    "typescript": "5.6.2",
+    "typescript-eslint": "^8.18.2",
+    "webpack-cli": "^6.0.1"
   }
 }
